# neovim

./: ARCHITECTURE.md  CONFLICT_RESOLUTION_TESTS.md  Cargo.toml  EVENT_DRIVEN_MIGRATION.md  EVENT_DRIVEN_SUMMARY.md  LOGGING_GUIDE.md  README.md  VIM_KEYBINDING_ANALYSIS.md  editor.toml  keymaps.toml  long_test_file.rs  multiline.txt  performance_optimizations.md  syntax.toml  test.txt  test_keymaps.rs  test_punctuation.rs  test_search.txt  themes.toml
examples/: event_driven_demo.rs
src/: async_syntax.rs  buffer.rs  command_registry.rs  completion.rs  config.rs  config_watcher.rs  editor.rs  event.rs  event_driven.rs  file.rs  keymap.rs  lib.rs  main.rs  mode.rs  search.rs  syntax.rs  terminal.rs  test_syntax.rs  text_objects.rs  theme.rs  theme_watcher.rs  ui.rs  window.rs
src/async_syntax/: tests.rs
src/buffer/: tests.rs
src/config/: editor.rs  mod.rs  tests.rs  theme.rs  watcher.rs
src/core/: buffer.rs  editor.rs  mod.rs  mode.rs  window.rs
src/core/buffer/: visual_block_tests.rs
src/editor/: tests.rs
src/features/: completion.rs  lsp.rs  macros.rs  mod.rs  search.rs  syntax.rs  text_objects.rs
src/input/: event_driven.rs  events.rs  keymap.rs  mod.rs
src/keymap/: tests.rs
src/mode/: tests.rs
src/search/: tests.rs
src/syntax/: tests.rs
src/text_objects/: tests.rs
src/theme/: tests.rs
src/ui/: mod.rs  renderer.rs  terminal.rs  tests.rs
src/utils/: command.rs  file.rs  mod.rs  plugin.rs
tests/: buffer_integration.rs  command_tests.rs  config_tests.rs  editor_tests.rs  empty_line_paste_tests.rs  events_tests.rs  file_operations_tests.rs  keymap_tests.rs  macro_tests.rs  mode_tests.rs  multiline_visual_tests.rs  search_integration.rs  syntax_integration.rs  text_objects_tests.rs  theme_tests.rs  ui_tests.rs  visual_block_mode_tests.rs  visual_line_keymap_test.rs  visual_line_mode_test.rs  visual_mode_exit_tests.rs  visual_selection_tests.rs  window_tests.rs
