[package]
name = "neovim"
version = "0.1.0"
edition = "2024"

[dependencies]
# Terminal handling
crossterm = "0.27"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON-RPC for LSP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration parsing
toml = "0.8"
# Regex support
regex = "1.0"
# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.10"
# File watching
notify = "6.0"
# Tree-sitter for syntax highlighting
tree-sitter = "0.20"
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Collections
indexmap = "2.0"
# Command line parsing
clap = { version = "4.0", features = ["derive"] }
# Fuzzy finding
fuzzy-matcher = "0.3"
