[package]
name = "neovim"
version = "0.2.0"
edition = "2024"

[dependencies]
# Terminal handling
crossterm = "0.29.0"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON-RPC for LSP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration parsing
toml = "0.9.4"
# Regex support
regex = "1.0"
# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.10"
# File watching
notify = "8.1.0"
# Tree-sitter for syntax highlighting
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
# Logging
log = "0.4"
env_logger = "0.11.8"
# Error handling
anyhow = "1.0"
thiserror = "2.0.12"
# Collections
indexmap = "2.0"
# Command line parsing
clap = { version = "4.0", features = ["derive"] }
# Fuzzy finding
fuzzy-matcher = "0.3"
#
once_cell = "1.18.0"

